Actions
Bug #10746
closedtelmod: NULL pointer errors
Start date:
2019-04-12
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
NULL pointer errors:
../../common/io/telmod.c: In function 'rcv_parse': ../../common/io/telmod.c:968:46: error: comparison between pointer and integer [-Werror] if ((*mp->b_rptr == '\n') || (*mp->b_rptr == NULL)) { ^~ ../../common/io/telmod.c:1085:17: error: comparison between pointer and integer [-Werror] (tmp[1] == NULL))) { ^~ ../../common/io/telmod.c: In function 'snd_parse': ../../common/io/telmod.c:1157:13: error: assignment makes integer from pointer without a cast [-Werror=int-conversion] *tmp1++ = NULL; ^ ../../common/io/telmod.c:1176:14: error: assignment makes integer from pointer without a cast [-Werror=int-conversion] *tmp1++ = NULL; ^ cc1: all warnings being treated as errors
Updated by Electric Monk about 3 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit c86160f040741e2e6312538e07eaa97b5053c172
commit c86160f040741e2e6312538e07eaa97b5053c172 Author: Toomas Soome <tsoome@me.com> Date: 2019-04-19T22:21:25.000Z 10746 telmod: NULL pointer errors Reviewed by: Sebastian Wiedenroth <sebastian.wiedenroth@skylime.net> Reviewed by: Robert Mustacchi <rm@joyent.com> Approved by: Dan McDonald <danmcd@joyent.com>
Actions